# synthetic-control-pymc

./: LICENSE  README.md  bayesian_synthetic_control.ipynb  pyproject.toml  synthetic_control.ipynb
