[tool.poetry]
name = "synthetic-control-pymc"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.0"
numpy = "1.23.4"
pymc = "4.2.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
arviz = "^0.17.0"
jax = "0.4.1"
jaxlib = "0.4.1"
graphviz = "^0.20.1"
statsmodels = "^0.14.1"
numpyro = "0.10.1"
joblib = "^1.3.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
